--- a/terminaide/templates/terminal.html
+++ b/terminaide/templates/terminal.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Terminal</title>
+    <title>{{ title }}</title>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='favicon.ico') }}">
     <style>
         /* Set background color for the entire viewport */
