--- a/terminaide/templates/terminal.html
+++ b/terminaide/templates/terminal.html
@@ -5,11 +5,11 @@
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="preconnect" href="{{ mount_path }}">
-    <link rel="dns-prefetch" href="{{ url_for('static', path='favicon.ico') }}">
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='favicon.ico') }}">
+    <link rel="dns-prefetch" href="{{ url_for('terminaide_static', path='favicon.ico') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('terminaide_static', path='favicon.ico') }}">
     <!-- Social Media Preview Tags -->
     <meta property="og:title" content="{{ title }}">
-    <meta property="og:image" content="{{ url_for('static', path=preview_image) }}">
+    <meta property="og:image" content="{{ url_for('terminaide_static', path=preview_image) }}">
     <meta property="og:type" content="website">
     <style>
         /* Set background color for the entire viewport */
